--- a/examples/Makefile.in
+++ b/examples/Makefile.in
@@ -80,10 +80,9 @@ check_PROGRAMS = diploid$(EXEEXT) diploid_ind$(EXEEXT) \
 	diploid_gzbinaryIO$(EXEEXT) diploid_gzbinaryIO_ind$(EXEEXT) \
 	diploid_fixed_sh$(EXEEXT) diploid_fixed_sh_ind$(EXEEXT) \
 	diploid_fixed_sh_ind_lambda$(EXEEXT) migsel_ind$(EXEEXT) \
-	migsel_split_ind$(EXEEXT) migsel_split_ind_list$(EXEEXT) \
-	bneck_selection_ind$(EXEEXT) diploid_ind_2locus$(EXEEXT) \
-	diploid_twopop_mig$(EXEEXT) pfix$(EXEEXT) RHH$(EXEEXT) \
-	TFL2013$(EXEEXT) HOC_ind$(EXEEXT)
+	migsel_split_ind_list$(EXEEXT) bneck_selection_ind$(EXEEXT) \
+	diploid_ind_2locus$(EXEEXT) diploid_twopop_mig$(EXEEXT) \
+	pfix$(EXEEXT) RHH$(EXEEXT) TFL2013$(EXEEXT) HOC_ind$(EXEEXT)
 @DEBUG_FALSE@am__append_1 = -DNDEBUG
 subdir = examples
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
@@ -143,7 +142,7 @@ am_diploid_gzbinaryIO_OBJECTS = diploid_gzbinaryIO.$(OBJEXT)
 diploid_gzbinaryIO_OBJECTS = $(am_diploid_gzbinaryIO_OBJECTS)
 diploid_gzbinaryIO_LDADD = $(LDADD)
 diploid_gzbinaryIO_DEPENDENCIES =
-am_diploid_gzbinaryIO_ind_OBJECTS = diploid_binaryIO_ind.$(OBJEXT)
+am_diploid_gzbinaryIO_ind_OBJECTS = diploid_gzbinaryIO_ind.$(OBJEXT)
 diploid_gzbinaryIO_ind_OBJECTS = $(am_diploid_gzbinaryIO_ind_OBJECTS)
 diploid_gzbinaryIO_ind_LDADD = $(LDADD)
 diploid_gzbinaryIO_ind_DEPENDENCIES =
@@ -163,10 +162,6 @@ am_migsel_ind_OBJECTS = migsel_ind.$(OBJEXT)
 migsel_ind_OBJECTS = $(am_migsel_ind_OBJECTS)
 migsel_ind_LDADD = $(LDADD)
 migsel_ind_DEPENDENCIES =
-am_migsel_split_ind_OBJECTS = migsel_split_ind.$(OBJEXT)
-migsel_split_ind_OBJECTS = $(am_migsel_split_ind_OBJECTS)
-migsel_split_ind_LDADD = $(LDADD)
-migsel_split_ind_DEPENDENCIES =
 am_migsel_split_ind_list_OBJECTS = migsel_split_ind_list.$(OBJEXT)
 migsel_split_ind_list_OBJECTS = $(am_migsel_split_ind_list_OBJECTS)
 migsel_split_ind_list_LDADD = $(LDADD)
@@ -224,8 +219,8 @@ SOURCES = $(HOC_ind_SOURCES) $(RHH_SOURCES) $(TFL2013_SOURCES) \
 	$(diploid_gzbinaryIO_SOURCES) \
 	$(diploid_gzbinaryIO_ind_SOURCES) $(diploid_ind_SOURCES) \
 	$(diploid_ind_2locus_SOURCES) $(diploid_twopop_mig_SOURCES) \
-	$(migsel_ind_SOURCES) $(migsel_split_ind_SOURCES) \
-	$(migsel_split_ind_list_SOURCES) $(pfix_SOURCES)
+	$(migsel_ind_SOURCES) $(migsel_split_ind_list_SOURCES) \
+	$(pfix_SOURCES)
 DIST_SOURCES = $(HOC_ind_SOURCES) $(RHH_SOURCES) $(TFL2013_SOURCES) \
 	$(bneck_selection_ind_SOURCES) $(diploid_SOURCES) \
 	$(diploid_binaryIO_SOURCES) $(diploid_binaryIO_ind_SOURCES) \
@@ -234,8 +229,8 @@ DIST_SOURCES = $(HOC_ind_SOURCES) $(RHH_SOURCES) $(TFL2013_SOURCES) \
 	$(diploid_gzbinaryIO_SOURCES) \
 	$(diploid_gzbinaryIO_ind_SOURCES) $(diploid_ind_SOURCES) \
 	$(diploid_ind_2locus_SOURCES) $(diploid_twopop_mig_SOURCES) \
-	$(migsel_ind_SOURCES) $(migsel_split_ind_SOURCES) \
-	$(migsel_split_ind_list_SOURCES) $(pfix_SOURCES)
+	$(migsel_ind_SOURCES) $(migsel_split_ind_list_SOURCES) \
+	$(pfix_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -354,17 +349,19 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+
+#	migsel_split_ind 
 diploid_SOURCES = diploid.cc common_gamete.hpp
 diploid_ind_SOURCES = diploid_ind.cc common_ind.hpp
 diploid_binaryIO_SOURCES = diploid_binaryIO.cc common_gamete.hpp
 diploid_binaryIO_ind_SOURCES = diploid_binaryIO_ind.cc common_ind.hpp
 diploid_gzbinaryIO_SOURCES = diploid_gzbinaryIO.cc common_gamete.hpp
-diploid_gzbinaryIO_ind_SOURCES = diploid_binaryIO_ind.cc common_ind.hpp
+diploid_gzbinaryIO_ind_SOURCES = diploid_gzbinaryIO_ind.cc common_ind.hpp
 diploid_fixed_sh_SOURCES = diploid_fixed_sh.cc common_gamete.hpp
 diploid_fixed_sh_ind_SOURCES = diploid_fixed_sh_ind.cc common_ind.hpp
 diploid_fixed_sh_ind_lambda_SOURCES = diploid_fixed_sh_ind_lambda.cc common_ind.hpp
 migsel_ind_SOURCES = migsel_ind.cc common_gamete.hpp
-migsel_split_ind_SOURCES = migsel_split_ind.cc common_gamete.hpp
+#migsel_split_ind_SOURCES=migsel_split_ind.cc common_gamete.hpp
 migsel_split_ind_list_SOURCES = migsel_split_ind_list.cc common_gamete.hpp
 bneck_selection_ind_SOURCES = bneck_selection_ind.cc common_ind.hpp
 diploid_ind_2locus_SOURCES = diploid_ind_2locus.cc common_ind.hpp
@@ -477,10 +474,6 @@ migsel_ind$(EXEEXT): $(migsel_ind_OBJECTS) $(migsel_ind_DEPENDENCIES) $(EXTRA_mi
 	@rm -f migsel_ind$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(migsel_ind_OBJECTS) $(migsel_ind_LDADD) $(LIBS)
 
-migsel_split_ind$(EXEEXT): $(migsel_split_ind_OBJECTS) $(migsel_split_ind_DEPENDENCIES) $(EXTRA_migsel_split_ind_DEPENDENCIES) 
-	@rm -f migsel_split_ind$(EXEEXT)
-	$(AM_V_CXXLD)$(CXXLINK) $(migsel_split_ind_OBJECTS) $(migsel_split_ind_LDADD) $(LIBS)
-
 migsel_split_ind_list$(EXEEXT): $(migsel_split_ind_list_OBJECTS) $(migsel_split_ind_list_DEPENDENCIES) $(EXTRA_migsel_split_ind_list_DEPENDENCIES) 
 	@rm -f migsel_split_ind_list$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(migsel_split_ind_list_OBJECTS) $(migsel_split_ind_list_LDADD) $(LIBS)
@@ -506,11 +499,11 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/diploid_fixed_sh_ind.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/diploid_fixed_sh_ind_lambda.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/diploid_gzbinaryIO.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/diploid_gzbinaryIO_ind.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/diploid_ind.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/diploid_ind_2locus.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/diploid_twopop_mig.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/migsel_ind.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/migsel_split_ind.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/migsel_split_ind_list.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pfix.Po@am__quote@
 
