new example (wrong model in there at the moment...

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -15,7 +15,8 @@ check_PROGRAMS=diploid \
 	pfix \
 	RHH \
 	TFL2013 \
-	HOC_ind
+	HOC_ind \
+	sex_limited_ind
 
 #	migsel_split_ind 
 
@@ -38,6 +39,7 @@ pfix_SOURCES=pfix.cc
 RHH_SOURCES=RHH.cc
 TFL2013_SOURCES=TFL2013.cc
 HOC_ind_SOURCES=HOC_ind.cc
+sex_limited_ind_SOURCES=sex_limited_ind.cc
 
 AM_CPPFLAGS=-Wall -W -I.
 
