--- a/Makefile.in
+++ b/Makefile.in
@@ -285,9 +285,9 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign
-SUBDIRS = fwdpp examples unit
+SUBDIRS = fwdpp examples unit experimental_examples
 ACLOCAL_AMFLAGS = -I m4
-EXTRA_DIST = doc/fwdpp.doxygen examples/*.cc examples/*.hpp examples/Makefile extensions/*.cc extensions/*.py LICENSE
+EXTRA_DIST = doc/fwdpp.doxygen examples/*.cc examples/*.hpp examples/Makefile extensions/*.cc extensions/*.py LICENSE experimental_examples/*.cc
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
