copied example into experimental_examples so that I can compare performance

--- a/experimental_examples/Makefile.am
+++ b/experimental_examples/Makefile.am
@@ -1,6 +1,7 @@
-check_PROGRAMS=sex_limited_ind
+check_PROGRAMS=sex_limited_ind diploid_fixed_sh_ind
 
-sex_limited_ind_SOURCES=sex_limited_ind.cc
+sex_limited_ind_SOURCES=sex_limited_ind.cc 
+diploid_fixed_sh_ind_SOURCES=diploid_fixed_sh_ind.cc
 
 AM_CPPFLAGS=-Wall -W -I.
 
