--- a/fwdpp/internal/Makefile.in
+++ b/fwdpp/internal/Makefile.in
@@ -255,7 +255,8 @@ pkginclude_HEADERS = mutation_internal.hpp \
 	gsl_discrete.hpp \
 	multilocus_rec.hpp \
 	IOhelp.hpp \
-	ms_sampling.hpp
+	ms_sampling.hpp \
+	diploid_fitness_dispatch.hpp
 
 all: all-am
 
