new unit test: custom diploid, sugar layer, serialization of custom diploid data

--- a/unit/Makefile.in
+++ b/unit/Makefile.in
@@ -83,7 +83,8 @@ POST_UNINSTALL = :
 @BUNIT_TEST_PRESENT_TRUE@	mlocusCrossoverTest$(EXEEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	siteDepFitness$(EXEEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	sugar1$(EXEEXT) sugar2$(EXEEXT) \
-@BUNIT_TEST_PRESENT_TRUE@	sugar3$(EXEEXT)
+@BUNIT_TEST_PRESENT_TRUE@	sugar3$(EXEEXT) \
+@BUNIT_TEST_PRESENT_TRUE@	sugar1_custom$(EXEEXT)
 @BUNIT_TEST_PRESENT_TRUE@am__append_1 = $(AM_LIBS)
 subdir = unit
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
@@ -134,6 +135,11 @@ am__sugar1_SOURCES_DIST = sugar1.cc
 @BUNIT_TEST_PRESENT_TRUE@am_sugar1_OBJECTS = sugar1.$(OBJEXT)
 sugar1_OBJECTS = $(am_sugar1_OBJECTS)
 sugar1_LDADD = $(LDADD)
+am__sugar1_custom_SOURCES_DIST = sugar1_custom.cc
+@BUNIT_TEST_PRESENT_TRUE@am_sugar1_custom_OBJECTS =  \
+@BUNIT_TEST_PRESENT_TRUE@	sugar1_custom.$(OBJEXT)
+sugar1_custom_OBJECTS = $(am_sugar1_custom_OBJECTS)
+sugar1_custom_LDADD = $(LDADD)
 am__sugar2_SOURCES_DIST = sugar2.cc
 @BUNIT_TEST_PRESENT_TRUE@am_sugar2_OBJECTS = sugar2.$(OBJEXT)
 sugar2_OBJECTS = $(am_sugar2_OBJECTS)
@@ -174,8 +180,8 @@ am__v_CXXLD_1 =
 SOURCES = $(crossoverTest_SOURCES) $(gameteTest_SOURCES) \
 	$(mlocusCrossoverTest_SOURCES) $(mutateTest_SOURCES) \
 	$(mutationTest_SOURCES) $(policyTests_SOURCES) \
-	$(siteDepFitness_SOURCES) $(sugar1_SOURCES) $(sugar2_SOURCES) \
-	$(sugar3_SOURCES)
+	$(siteDepFitness_SOURCES) $(sugar1_SOURCES) \
+	$(sugar1_custom_SOURCES) $(sugar2_SOURCES) $(sugar3_SOURCES)
 DIST_SOURCES = $(am__crossoverTest_SOURCES_DIST) \
 	$(am__gameteTest_SOURCES_DIST) \
 	$(am__mlocusCrossoverTest_SOURCES_DIST) \
@@ -183,7 +189,8 @@ DIST_SOURCES = $(am__crossoverTest_SOURCES_DIST) \
 	$(am__mutationTest_SOURCES_DIST) \
 	$(am__policyTests_SOURCES_DIST) \
 	$(am__siteDepFitness_SOURCES_DIST) $(am__sugar1_SOURCES_DIST) \
-	$(am__sugar2_SOURCES_DIST) $(am__sugar3_SOURCES_DIST)
+	$(am__sugar1_custom_SOURCES_DIST) $(am__sugar2_SOURCES_DIST) \
+	$(am__sugar3_SOURCES_DIST)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -312,6 +319,7 @@ top_srcdir = @top_srcdir@
 @BUNIT_TEST_PRESENT_TRUE@sugar1_SOURCES = sugar1.cc
 @BUNIT_TEST_PRESENT_TRUE@sugar2_SOURCES = sugar2.cc
 @BUNIT_TEST_PRESENT_TRUE@sugar3_SOURCES = sugar3.cc
+@BUNIT_TEST_PRESENT_TRUE@sugar1_custom_SOURCES = sugar1_custom.cc
 @BUNIT_TEST_PRESENT_TRUE@AM_CXXFLAGS = 
 @BUNIT_TEST_PRESENT_TRUE@AM_LIBS = -lboost_unit_test_framework
 all: all-am
@@ -384,6 +392,10 @@ sugar1$(EXEEXT): $(sugar1_OBJECTS) $(sugar1_DEPENDENCIES) $(EXTRA_sugar1_DEPENDE
 	@rm -f sugar1$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(sugar1_OBJECTS) $(sugar1_LDADD) $(LIBS)
 
+sugar1_custom$(EXEEXT): $(sugar1_custom_OBJECTS) $(sugar1_custom_DEPENDENCIES) $(EXTRA_sugar1_custom_DEPENDENCIES) 
+	@rm -f sugar1_custom$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(sugar1_custom_OBJECTS) $(sugar1_custom_LDADD) $(LIBS)
+
 sugar2$(EXEEXT): $(sugar2_OBJECTS) $(sugar2_DEPENDENCIES) $(EXTRA_sugar2_DEPENDENCIES) 
 	@rm -f sugar2$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(sugar2_OBJECTS) $(sugar2_LDADD) $(LIBS)
@@ -406,6 +418,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/policyTests.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/siteDepFitness.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar1.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar1_custom.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar2.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sugar3.Po@am__quote@
 
