--- a/unit/Makefile.am
+++ b/unit/Makefile.am
@@ -9,7 +9,8 @@ check_PROGRAMS=mutateTest \
 	siteDepFitness \
 	sugar1 \
 	sugar2 \
-	sugar3
+	sugar3 \
+	sugar1_custom
 
 mutateTest_SOURCES=mutateTest.cc 
 crossoverTest_SOURCES=crossoverTest.cc
@@ -21,6 +22,7 @@ siteDepFitness_SOURCES=siteDepFitness.cc
 sugar1_SOURCES=sugar1.cc
 sugar2_SOURCES=sugar2.cc
 sugar3_SOURCES=sugar3.cc
+sugar1_custom_SOURCES=sugar1_custom.cc
 
 AM_CXXFLAGS=
 
