mutation policy dispatch method generalized

--- a/fwdpp/Makefile.am
+++ b/fwdpp/Makefile.am
@@ -22,6 +22,7 @@ pkginclude_HEADERS=debug.hpp \
 	sampling_functions.hpp \
 	sampling_functions.tcc \
 	util.hpp \
-	recombination_methods_ind.hpp
+	recombination_methods_ind.hpp \
+	type_traits.hpp
 
 
