--- a/fwdpp/internal/Makefile.in
+++ b/fwdpp/internal/Makefile.in
@@ -256,7 +256,8 @@ pkginclude_HEADERS = mutation_internal.hpp \
 	multilocus_rec.hpp \
 	IOhelp.hpp \
 	ms_sampling.hpp \
-	diploid_fitness_dispatch.hpp
+	diploid_fitness_dispatch.hpp \
+	type_traits.hpp
 
 all: all-am
 
