--- a/fwdpp/Makefile.in
+++ b/fwdpp/Makefile.in
@@ -313,7 +313,8 @@ pkginclude_HEADERS = debug.hpp \
 	sampling_functions.hpp \
 	sampling_functions.tcc \
 	util.hpp \
-	recombination_methods_ind.hpp
+	recombination_methods_ind.hpp \
+	type_traits.hpp
 
 all: all-recursive
 
