--- a/fwdpp/tags/Makefile.am
+++ b/fwdpp/tags/Makefile.am
@@ -1,3 +1,3 @@
 pkgincludedir=$(prefix)/include/fwdpp/tags
 
-pkginclude_HEADERS=mutation_tags.hpp gamete_tags.hpp diploid_tags.hpp
+pkginclude_HEADERS=gamete_tags.hpp diploid_tags.hpp
