new lookup table for processing what happens after recombination.  Internal details still in flux, but auto helps solve some of that.  Multilocus API still broken.

--- a/fwdpp/internal/Makefile.in
+++ b/fwdpp/internal/Makefile.in
@@ -257,7 +257,8 @@ pkginclude_HEADERS = mutation_internal.hpp \
 	IOhelp.hpp \
 	ms_sampling.hpp \
 	diploid_fitness_dispatch.hpp \
-	type_traits.hpp
+	type_traits.hpp \
+	gamete_lookup_table.hpp
 
 all: all-am
 
