--- a/configure.ac
+++ b/configure.ac
@@ -21,7 +21,8 @@ AX_CXX_COMPILE_STDCXX_11([noext],[mandatory])
 AC_LANG(C++)
 AC_CONFIG_FILES([Makefile fwdpp/Makefile fwdpp/internal/Makefile fwdpp/tags/Makefile fwdpp/sugar/Makefile fwdpp/sugar/singlepop/Makefile fwdpp/sugar/metapop/Makefile fwdpp/sugar/multiloc/Makefile fwdpp/sugar/poptypes/Makefile fwdpp/sugar/gsl/Makefile fwdpp/experimental/Makefile examples/Makefile unit/Makefile experimental_examples/Makefile])
 
-AC_ARG_ENABLE([standard],AS_HELP_STRING([--enable-standard],[Disable use of boost containers when compiling examples]),[AC_DEFINE([USE_STANDARD_CONTAINERS],[1],[Prefer containers from namespace std when compiling])])
+dnl AC_ARG_ENABLE([standard],AS_HELP_STRING([--enable-standard],[Disable use of boost containers when compiling examples]),[AC_DEFINE([USE_STANDARD_CONTAINERS],[1],[Prefer containers from namespace std when compiling])])
+AC_ARG_ENABLE([boost],AS_HELP_STRING([--enable-boost],[Enable use of boost containers when compiling examples]),[AC_DEFINE([USE_BOOST_CONTAINERS],[1],[Use containers from namespace boost when compiling])])
 
 AC_ARG_ENABLE([debug],AS_HELP_STRING([--enable-debug],[Compile examples with run-time assert macro enabled.]))
 AM_CONDITIONAL([DEBUG],test x$enable_debug = xyes)
@@ -29,17 +30,23 @@ AM_CONDITIONAL([DEBUG],test x$enable_debug = xyes)
 dnl do we want tcmalloc?
 AC_ARG_ENABLE([tcmalloc],AS_HELP_STRING([--enable-tcmalloc],[Enable linking to Google's tcmalloc library, if present.]))
 
-dnl check for things that we might need
-AC_CHECK_HEADER(boost/container/vector.hpp, [AC_DEFINE([HAVE_BOOST_VECTOR],[1],[Define if boost/container/vector.hpp exists])], [echo "boost/container/vector.hpp not found.  Will use std::vector for examples."])
-AC_CHECK_HEADER(boost/container/list.hpp, [AC_DEFINE([HAVE_BOOST_LIST],[1],[Define if boost/container/list.hpp exists])], [echo "boost/container/list.hpp not found.  Will use std::list for examples."])
-AC_CHECK_HEADER(boost/test/unit_test.hpp, BUNITTEST=1,[echo "boost/test/unit_test.hpp not found. Unit tests will not be compiled."])
-AC_CHECK_HEADER(boost/pool/pool_alloc.hpp, [AC_DEFINE([HAVE_BOOST_POOL_ALLOC],[1],[Define if boost/pool/pool_alloc.hpp exists])])
-AC_CHECK_HEADER(boost/unordered_set.hpp,[AC_DEFINE([HAVE_BOOST_UNORDERED_SET],[1],[Define if boost/unordered_set.hpp exists])]) 
-AC_CHECK_HEADER(boost/functional/hash.hpp, [AC_DEFINE([HAVE_BOOST_HASH],[1],[Define if boost/functional/hash.hpp exists])])
+dnl check for things that are required to compile all examples and/or use library at all
 AC_CHECK_HEADER(Sequence/SimDataIO.hpp, , [AC_MSG_ERROR([Sequence/SimDataIO.hpp not found. libsequence (www.molpopgen.org) >= 1.7.8 required.])])
 AC_CHECK_HEADER(gsl/gsl_rng.h,HAVE_GSL=1,[AC_MSG_ERROR([gsl/gsl_rng.h not found.  Please install the GNU Scientific Library])])
 AC_CHECK_HEADER(gsl/gsl_randist.h,HAVE_GSL=1,[AC_MSG_ERROR([gsl/gsl_rng.h not found.  Please install the GNU Scientific Library])])
 AC_CHECK_HEADER(zlib.h,,[AC_MSG_ERROR([zlib.h not found.  zlib >= 1.2.5 is requred])])
+
+dnl check for optional depdendencies
+if test x$enable_boost = xyes
+then
+AC_CHECK_HEADER(boost/container/vector.hpp,,[AC_MSG_ERROR([boost containers requested but boost/container/vector.hpp not foun])])
+AC_CHECK_HEADER(boost/container/list.hpp,,[AC_MSG_ERROR([boost containers requested but boost/container/list.hpp not foun])])
+AC_CHECK_HEADER(boost/pool/pool_alloc.hpp,,[AC_MSG_ERROR([boost containers requested but boost/container/bool_alloc.hpp not foun])])
+AC_CHECK_HEADER(boost/unordered_set.hpp,,[AC_MSG_ERROR([boost containers requested but boost/unordered_set.hpp not foun])])
+AC_CHECK_HEADER(boost/functional/hash.hpp,,[AC_MSG_ERROR([boost containers requested but boost/functional/hash.hpp not foun])])
+fi
+
+AC_CHECK_HEADER(boost/test/unit_test.hpp, BUNITTEST=1,[echo "boost/test/unit_test.hpp not found. Unit tests will not be compiled."])
 
 AM_CONDITIONAL([BUNIT_TEST_PRESENT], test x$BUNITTEST = x1)
 
@@ -58,7 +65,10 @@ AC_LANG_SAVE
           AC_LANG_CPLUSPLUS
           AC_REQUIRE_CPP
           AC_CHECK_LIB(sequence, main,,[AC_MSG_ERROR([libsequence runtime library does not seem to be here])])
-	  AC_CHECK_LIB(boost_system,main,,)
+if test x$enable_boost = xyes
+then
+	  AC_CHECK_LIB(boost_system,main,,[AC_MSG_ERROR([boost containers requested but the boost_system runtime library does not seem to be here])])
+fi
 AC_LANG_RESTORE
 
 dnl AC_CONFIG_HEADER(config.h)
