--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 AUTOMAKE_OPTIONS = foreign
-SUBDIRS=fwdpp examples unit experimental_examples
+SUBDIRS=fwdpp examples unit experimental_examples src
 ACLOCAL_AMFLAGS = -I m4
 EXTRA_DIST=doc/fwdpp.doxygen examples/*.cc examples/*.hpp experimental_examples/*.cc python_examples/*.cc python_examples/*.py LICENSE experimental_examples/*.cc
