--- a/Makefile.in
+++ b/Makefile.in
@@ -285,7 +285,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign
-SUBDIRS = fwdpp examples unit experimental_examples
+SUBDIRS = fwdpp examples unit experimental_examples src
 ACLOCAL_AMFLAGS = -I m4
 EXTRA_DIST = doc/fwdpp.doxygen examples/*.cc examples/*.hpp experimental_examples/*.cc python_examples/*.cc python_examples/*.py LICENSE experimental_examples/*.cc
 all: config.h
