--- a/devtools/skeleton/configure.ac
+++ b/devtools/skeleton/configure.ac
@@ -1,5 +1,8 @@
 AC_PREREQ(2.59)
 
+dnl Default package version is 0.1.0, which is what KRT typically
+dnl uses to correspond to an "initial published version"
+dnl accompanying a paper
 AC_INIT([FWDPPPACKAGE],[0.1.0],[FWDPPPROJECTURL])
 AC_CONFIG_SRCDIR([src/FWDPPPACKAGE.cc])
 AM_INIT_AUTOMAKE
@@ -35,17 +38,29 @@ AX_CXX_COMPILE_STDCXX_11([noext],[mandatory])
 AC_LANG(C++)
 AC_CONFIG_FILES([Makefile src/Makefile])
 
-AC_ARG_ENABLE([standard],AS_HELP_STRING([--enable-standard],[Disable use of boost containers.]),[AC_DEFINE([USE_STANDARD_CONTAINERS],[1],[Prefer containers from namespace std when compiling])])
+dnl enable use of boost list/vector/etc., if desired
+AC_ARG_ENABLE([boost],AS_HELP_STRING([--enable-boost],[Enable use of boost containers when compiling examples]),[AC_DEFINE([USE_BOOST_CONTAINERS],[1],[Use containers from namespace boost when compiling])])
 
+dnl tcmalloc from Google's perftools
+AC_ARG_ENABLE([tcmalloc],AS_HELP_STRING([--enable-tcmalloc],[Enable linking to Google's tcmalloc library, if present.]))
+
+dnl Do not compile with -DNDEBUG, so that (C-style) assertions are enables via <cassert>
 AC_ARG_ENABLE([debug],AS_HELP_STRING([--enable-debug],[Compile examples with run-time assert macro enabled.]))
 AM_CONDITIONAL([DEBUG],test x$enable_debug = xyes)
 
 AC_CHECK_HEADER(fwdpp/diploid.hh,,[AC_MSG_ERROR([fwdpp/diploid.hh not found -- please install fwdpp (https://github.com/molpopgen/fwdpp)])])
+
+dnl check for optional dependencies
+if test x$enable_boost = xyes
+then
 AC_CHECK_HEADER(boost/container/vector.hpp, [AC_DEFINE([HAVE_BOOST_VECTOR],[1],[Define if boost/container/vector.hpp exists])], [echo "boost/container/vector.hpp not found.  Will use std::vector for examples."])
 AC_CHECK_HEADER(boost/container/list.hpp, [AC_DEFINE([HAVE_BOOST_LIST],[1],[Define if boost/container/list.hpp exists])], [echo "boost/container/list.hpp not found.  Will use std::list for examples."])
 AC_CHECK_HEADER(boost/pool/pool_alloc.hpp, [AC_DEFINE([HAVE_BOOST_POOL_ALLOC],[1],[Define if boost/pool/pool_alloc.hpp exists])])
 AC_CHECK_HEADER(boost/unordered_set.hpp,[AC_DEFINE([HAVE_BOOST_UNORDERED_SET],[1],[Define if boost/unordered_set.hpp exists])]) 
 AC_CHECK_HEADER(boost/functional/hash.hpp, [AC_DEFINE([HAVE_BOOST_HASH],[1],[Define if boost/functional/hash.hpp exists])])
+fi
+
+dnl required dependencies
 AC_CHECK_HEADER(Sequence/SimDataIO.hpp, , [AC_MSG_ERROR([Sequence/SimDataIO.hpp not found. libsequence (www.molpopgen.org) >= 1.7.8 required.])])
 AC_CHECK_HEADER(gsl/gsl_rng.h,HAVE_GSL=1,[AC_MSG_ERROR([gsl/gsl_rng.h not found.  Please install the GNU Scientific Library])])
 AC_CHECK_HEADER(gsl/gsl_randist.h,HAVE_GSL=1,[AC_MSG_ERROR([gsl/gsl_rng.h not found.  Please install the GNU Scientific Library])])
@@ -60,7 +75,13 @@ AC_LANG_SAVE
           AC_LANG_CPLUSPLUS
           AC_REQUIRE_CPP
           AC_CHECK_LIB(sequence, main,,[AC_MSG_ERROR([echo "libsequence runtime library does not seem to be here";exit 1])])
-	  AC_CHECK_LIB(boost_system,main,,)
+	  dnl if we want boost containers, then we need to -lboost_system at link time
+	  dnl Note that other useful boost libraries like interprocess, etc., also depend on the boost_system runtime lib,
+	  dnl and so you may want to undo the conditional around this lib check.
+	  if test x$enable_boost = xyes
+	  then
+		AC_CHECK_LIB(boost_system,main,,)
+	  fi
 AC_LANG_RESTORE
 
 AC_OUTPUT
