convenience header for sugar stuff.  #23

--- a/fwdpp/Makefile.am
+++ b/fwdpp/Makefile.am
@@ -20,7 +20,8 @@ pkginclude_HEADERS=debug.hpp \
 	sampling_functions.hpp \
 	sampling_functions.tcc \
 	type_traits.hpp \
-	util.hpp
+	util.hpp \
+	sugar.hpp
 
 
 
