--- a/fwdpp/Makefile.in
+++ b/fwdpp/Makefile.in
@@ -311,7 +311,8 @@ pkginclude_HEADERS = debug.hpp \
 	sampling_functions.hpp \
 	sampling_functions.tcc \
 	type_traits.hpp \
-	util.hpp
+	util.hpp \
+	sugar.hpp
 
 all: all-recursive
 
